opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/torch"
bug-reports: "https://github.com/janestreet/torch/issues"
dev-repo: "git+https://github.com/janestreet/torch.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/torch/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14"}
  "base"  {>= "v0.16" & < "v0.17"}
  "dune"  {>= "2.0.0"}
  "torch" {>= "v0.16.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Torch bindings for OCaml"
description: "
The ocaml-torch project provides some OCaml bindings for the Torch library.
This brings to OCaml NumPy-like tensor computations with GPU acceleration and
tape-based automatic differentiation.
"
